# SDLTesting

./: CMakeLists.txt
include/: Entity.hpp  Math.hpp  RenderWindow.hpp  Utils.hpp
src/: Entity.cpp  RenderWindow.cpp  main.cpp
